# LocINO-Host

./: .gitmodules  CMakeLists.txt
src/: receiver.cpp  sender.cpp
